# dariel-tech-radar

./: .gitignore  LICENSE  README.md  dariel-tech-radar.code-workspace  techradar.csv  versions.tf
.tours/: overview.tour
_cloud/: Program.cs  _cloud.csproj
_cloud/cloud/: Aux.cs  Main.cs
_data/: README.MD  excel-to-csv.py  sheet.csv  technology-list.csv  technology-list.xlsx
automerge/: README.md
automerge/todo/: package.json  webpack.config.js
bringyourownradar/: README 2.md  README.md
cog/: cog.yaml  predict.py  readme.md
d2lang/: README.md  in.d2  sample.d2
data/: excel-to-csv.py  pyproject.toml  technology-list.csv  technology-list.xlsx
docspell/: readme.md
docspell/mayan/: readme.md
git-automerge/: README.md  package.json
graphviz/: README.md  diagram.py
hylo/: readme.md
js-PouchDB/: README.md  index.html
js-PouchDB/js/: app.js
js-PouchDB/server/: README.md
k8s/: dev.ns.yaml
mistralai/: main.js  package-lock.json  package.json
netcore-gRPC/: README.md  netcore-gRPC.sln
netcore-gRPC/client/: Program.cs  client.csproj
netcore-gRPC/greeter/: Program.cs
netcore-graphQL/: README.md
netcore-graphQL/hello-world/: Main.cs  Program.cs  TextSerializer.cs  netcore-graphQL.csproj
netcore-graphQL/server/: Globals.cs  Program.cs  (+3 more)
netcoreblzrapp/: Dockerfile  Program.cs  README.md  Startup.cs  _Imports.razor
netcoregRPC/: .gitignore
nim/: readme.md
rust/: README.md
sourcegraph/: README.MD
vowpalwabbit/: main.py  pyproject.toml  train.py
wasm/: README.md
wordcloud/: file.csv  file.tsv  quicksight.csv  stopwords
(+45 files in other folders)
