[tool.poetry]
name = "xlsx2csv"
version = "0.1.0"
description = "Convert the Dariel xlsx file to the byor csv file"
authors = ["Mandla Mbuli <mail@mandla.me>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
