[tool.poetry]
name = "mlsample"
version = "0.0.0"
description = "vowpalwabbit ML sample"
authors = ["Sasha <sasha.slankamenac@darile.co.za>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9.13"
vowpalwabbit = "^9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
